# Pre-cancer-atlas

./: .gcloudignore  .gitignore  Dockerfile  README.md  precancer.py  pyproject.toml  requirements.txt
scripts/: check_env.py  extract_genes.py
src/pre_cacner_atlas/: main.py
static/: BingSiteAuth.xml  genes.json  index_styles.css  robots.txt  sitemap.xml
templates/: pre_cancer_atlas.html  stats.html
